@@ -1,6 +1,6 @@
 #ifndef _SHELLAPI_H
 #define _SHELLAPI_H
-#if __GNUC__ >=3
+#if __GNUC__ >= 3
 #pragma GCC system_header
 #endif
 
@@ -96,6 +96,7 @@ extern "C" {
 
 typedef WORD FILEOP_FLAGS;
 typedef WORD PRINTEROP_FLAGS;
+#include <pshpack2.h>
 typedef struct _AppBarData {
 	DWORD	cbSize;
 	HWND	hWnd;
@@ -157,7 +158,6 @@ typedef struct _SHELLEXECUTEINFOW {
 	HANDLE hIcon;
 	HANDLE hProcess;
 } SHELLEXECUTEINFOW,*LPSHELLEXECUTEINFOW;
-#include <pshpack2.h>
 typedef struct _SHFILEOPSTRUCTA {
 	HWND hwnd;
 	UINT wFunc;
@@ -178,7 +178,6 @@ typedef struct _SHFILEOPSTRUCTW {
 	PVOID hNameMappings;
 	LPCWSTR lpszProgressTitle;
 } SHFILEOPSTRUCTW,*LPSHFILEOPSTRUCTW;
-#include <poppack.h>
 typedef struct _SHFILEINFOA {
 	HICON hIcon;
 	int iIcon;
@@ -198,6 +197,7 @@ typedef struct _SHQUERYRBINFO {
 	__int64 i64Size;
 	__int64 i64NumItems;
 } SHQUERYRBINFO, *LPSHQUERYRBINFO;
+#include <poppack.h>
 
 LPWSTR * WINAPI CommandLineToArgvW(LPCWSTR,int*);
 void WINAPI DragAcceptFiles(HWND,BOOL);
